# solvapay-sdk

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .eslintrc.react.json  .gitignore  .npmrc  .npmrc.example  .prettierignore  .prettierrc.json  AUTH_REFACTOR_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SECURITY_REVIEW.md  commitlint.config.ts  eslint.config.mjs  eslint.config.react.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.docs.json  tsconfig.json  tsconfig.with-examples.json  turbo.json  typedoc.json  update-subscription-docs.plan.md
examples/python/get-merchant/: README.md  get_merchant.py  main.py  pyproject.toml  test_get_merchant.py
examples/rust/get-merchant/: Cargo.toml  README.md
examples/rust/get-merchant/src/: lib.rs  main.rs
examples/rust/get-merchant/tests/: example.rs
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/bindings/c/: Cargo.toml  build.rs  cbindgen.toml
rust/bindings/c/ctest/: run.sh  smoke.c
rust/bindings/c/include/: solvapay.h
rust/bindings/c/src/: abi.rs  dispatch.rs  error.rs  handle.rs  lib.rs  runtime.rs
rust/bindings/c/tests/: header_golden.rs
rust/bindings/go/: cancel_test.go  client_generated.go  errors.go  fixture_conformance_test.go  getmerchant_test.go  go.mod  pool_test.go  signature_parity_generated_test.go  solvapay.go  solvapay_core.wasm  version_test.go  webhook_test.go
rust/bindings/go/scripts/: build-wasm.sh
rust/bindings/go/wasm/: Cargo.toml
rust/bindings/node/: Cargo.toml  browser.js  build.rs  index.d.ts  index.js  package-lock.json  package.json  server-native.wasi-browser.js  server-native.wasi.cjs
rust/bindings/node/__test__/: binding.spec.mjs  clean-install-orchestrator.spec.mjs
rust/bindings/node/scripts/: check-artifacts.mjs  clean-install-consumer.mjs  clean-install-lib.mjs  clean-install-smoke.mjs  client-smoke-fixture.mjs  prepare-clean-install-packages.mjs  targets.mjs  webhook-smoke-fixture.mjs
rust/bindings/node/src/: args.rs  decisions.rs  error.rs  lib.rs  native_client.rs  payload_builders.rs
rust/bindings/python/: .gitignore  Cargo.toml  pyproject.toml  pyrightconfig.json
rust/bindings/python/scripts/: check-wheels.py  live_contract.py
rust/bindings/python/src/: args.rs  client.rs  decisions.rs  error.rs  fixture_host.rs  lib.rs  payload_builders.rs  register.rs  runtime.rs
rust/bindings/python/tests/: signature_parity_generated_test.py  test_contract_fixtures.py  test_facade.py  test_native_envelope.py  test_smoke.py  test_version_skew.py
rust/bindings/ruby/: .gitignore  .rubocop.yml  Gemfile  Rakefile  Steepfile  solvapay.gemspec
rust/bindings/ruby/lib/: solvapay.rb
rust/bindings/ruby/scripts/: check-gems.rb  dock-build.sh  live_contract.rb
rust/bindings/ruby/sig/: solvapay.rbs
rust/bindings/ruby/test/: contract.rb  contract_fixtures_test.rb  facade_test.rb  live_contract_test.rb  native_envelope_test.rb  signature_parity_generated_test.rb  smoke_test.rb  version_skew_test.rb
rust/bindings/wasm/: Cargo.toml  README.md  budgets.json  package.json
rust/bindings/wasm/__test__/: binding.spec.mjs
rust/bindings/wasm/runtime/: browser-node.js  browser-web.js  browser.d.ts  deno.js  index.d.ts  node.js  web.js  workerd.js
rust/bindings/wasm/scripts/: build.mjs  check-artifacts-present.mjs  check-browser-symbols.mjs  measure-wasm.mjs
rust/bindings/wasm/src/: args.rs  decisions.rs  error.rs  lib.rs  payload_builders.rs  wasm_client.rs
rust/crates/solvapay/: Cargo.toml  README.md
rust/crates/solvapay-core/: Cargo.toml  README.md
rust/crates/solvapay-core/src/: activation.rs  auth_resolution.rs  balance_poll.rs  business_details.rs  checkout.rs  credit_display.rs  customer_sync.rs  error.rs  helper_error.rs  hmac_util.rs  lib.rs  limits.rs  payment.rs  paywall_decision.rs  paywall_gate.rs  paywall_payload.rs  paywall_state.rs  plans.rs  product.rs  purchase.rs  renewal.rs  retry.rs  route_error.rs  seller_identity.rs  serde_util.rs  usage.rs  webhook.rs
rust/crates/solvapay-dto/: Cargo.toml  README.md
rust/crates/solvapay-dto/src/: error_templates.rs  lib.rs  overlays.rs  routes.rs  schemas.rs
rust/crates/solvapay-dto/tests/: client_roundtrip.rs
rust/crates/solvapay-transport/: Cargo.toml  README.md
rust/crates/solvapay-transport/src/: client.rs  fetch_transport.rs  http.rs  lib.rs  reqwest_transport.rs  shell.rs  transport.rs
rust/crates/solvapay-transport/tests/: client_group_a_fixtures.rs  client_group_a_smoke.rs  client_group_b_fixtures.rs  client_group_c_fixtures.rs  client_group_c_smoke.rs  shell_fixtures.rs  shell_smoke.rs  wasm_client_group_a_fixtures.rs  wasm_client_group_b_fixtures.rs  wasm_client_group_c_fixtures.rs  wasm_fetch.rs  wasm_shell_fixtures.rs  wire_fixtures.rs
rust/crates/solvapay/src/: blocking.rs  blocking_generated.rs  client.rs  client_generated.rs  config.rs  gate.rs  lib.rs
rust/crates/solvapay/tests/: blocking_smoke.rs  fixture_conformance.rs  hello_world.rs  live_dev.rs  signature_parity_generated.rs
rust/scripts/: check-no-unwrap.sh  check-publish-graph.sh  test-wasm-transport.sh  wasm-fixture-server.mjs
rust/tools/dto-gen/: Cargo.toml
rust/tools/dto-gen/assets/: binding-emit.snapshot.json  native-py-emit.snapshot.json  native-rb-emit.snapshot.json  native-ts-emit.snapshot.json
rust/tools/dto-gen/scripts/: extract-binding-emit.mjs  extract-native-ts-emit.mjs  merge-binding-emit.mjs
rust/tools/dto-gen/src/: doc_coverage.rs  doc_render.rs  emit.rs  emit_bindings_rs.rs  emit_bindings_ts.rs  emit_client_go.rs  emit_client_rb.rs  emit_client_rs.rs  emit_client_ts.rs  emit_native_py.rs  emit_native_rb.rs  emit_parity_suite_go.rs  emit_parity_suite_py.rs  emit_parity_suite_rb.rs  emit_parity_suite_rs.rs  emit_parity_suite_ts.rs  emit_pyi_py.rs  emit_rbs_rb.rs  emit_ts.rs  error.rs  ir.rs  lib.rs  lower_bindings.rs  lower_catalog.rs  lower_errors.rs  lower_overlays.rs  (+4 more)
rust/tools/fixture-runner/: Cargo.toml
rust/tools/live-contract/: Cargo.toml
rust/tools/shadow-invoker/: Cargo.toml
(+1881 files in other folders)
