[workspace]
resolver = "2"
members = [
  "crates/solvapay-core",
  "tools/fixture-runner",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hmac = "0.13.0"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
walkdir = "2.5.0"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# §7.2 WASM size profile — used by later wasm-bindgen / WASI builds.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
