[project]
name = "solvapay-example-get-merchant"
version = "0.0.0"
description = "Minimal SolvaPay Python SDK get-merchant example (not published)"
requires-python = ">=3.9"
dependencies = [
  "solvapay",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
