[package]
name = "solvapay-c"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Optional native C ABI for SolvaPay (Step 54 scaffold)"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "solvapay_c"

[dependencies]
solvapay-core = { path = "../../crates/solvapay-core", default-features = false, features = ["server"] }
solvapay-dto = { path = "../../crates/solvapay-dto" }
solvapay-transport = { path = "../../crates/solvapay-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
cbindgen = "0.29.0"
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = { workspace = true }

[lints]
workspace = true
