[package]
name = "solvapay-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wasm-bindgen edge/browser binding for solvapay-core (Step 38)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Exactly one of edge | browser must be enabled at build time.
edge = ["solvapay-core/webhook-verify"]
browser = ["solvapay-core/browser"]

[dependencies]
js-sys = { workspace = true }
serde_json = { workspace = true }
solvapay-core = { path = "../../crates/solvapay-core", default-features = false }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
