[package]
name = "solvapay-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wasm-bindgen edge/browser binding for solvapay-core (Step 38)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Exactly one of edge | browser must be enabled at build time.
# `edge` = full server surface: webhook verify + transport `WasmClient` +
# sync decision / MCP payload envelopes. `browser` = public-safe pure sync
# helpers only (no webhook, no transport, no secret-key client).
edge = [
    "solvapay-core/webhook-verify",
    "dep:solvapay-dto",
    "dep:solvapay-transport",
    "dep:wasm-bindgen-futures",
]
browser = ["solvapay-core/browser"]

[dependencies]
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solvapay-core = { path = "../../crates/solvapay-core", default-features = false }
solvapay-dto = { path = "../../crates/solvapay-dto", optional = true }
solvapay-transport = { path = "../../crates/solvapay-transport", optional = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
