[package]
name = "solvapay-dto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Generated SolvaPay wire DTOs (do not hand-edit — regenerate via dto-gen)"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
fixture-runner = { path = "../../tools/fixture-runner" }
walkdir = { workspace = true }

[lints]
workspace = true
