[package]
name = "solvapay-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SolvaPay HTTP Transport trait, native reqwest/rustls, and WASM Fetch"
publish = false

[dependencies]
solvapay-core = { path = "../solvapay-core" }
solvapay-dto = { path = "../solvapay-dto" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Headers", "Request", "RequestInit", "Response"] }

[dev-dependencies]
fixture-runner = { path = "../../tools/fixture-runner" }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true, features = ["Headers", "Request", "RequestInit", "Response"] }

[lints]
workspace = true
