[package]
name = "solvapay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Official SolvaPay SDK — async facade over solvapay-transport and solvapay-core"
publish = false

[dependencies]
solvapay-core = { path = "../solvapay-core" }
solvapay-dto = { path = "../solvapay-dto" }
solvapay-transport = { path = "../solvapay-transport" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[features]
default = []
blocking = ["tokio/rt"]

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
solvapay-rust-examples-env = { path = "../../../examples/rust/env" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
