[package]
name = "solvapay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Official SolvaPay SDK — async facade over solvapay-transport and solvapay-core"
readme = "README.md"
publish = true

[dependencies]
solvapay-core = { path = "../solvapay-core", version = "0.1.0" }
solvapay-dto = { path = "../solvapay-dto", version = "0.1.0" }
solvapay-transport = { path = "../solvapay-transport", version = "0.1.0" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[features]
default = []
blocking = ["tokio/rt"]

[dev-dependencies]
fixture-runner = { path = "../../tools/fixture-runner" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
solvapay-rust-examples-env = { path = "../../../examples/rust/env" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
