[package]
name = "fixture-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Replays Phase 0 golden fixtures against solvapay-core bindings"
publish = false

[[bin]]
name = "fixture-runner"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
solvapay-core = { path = "../../crates/solvapay-core" }
thiserror = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
