[package]
name = "shadow-invoker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI dispatch for shadow-mode: camelCase fn → SolvaPayClient with wire recording"
publish = false

[[bin]]
name = "shadow-invoker"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
solvapay-core = { path = "../../crates/solvapay-core" }
solvapay-dto = { path = "../../crates/solvapay-dto" }
solvapay-transport = { path = "../../crates/solvapay-transport" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "io-std"] }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
