[package]
name = "solvapay-go-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASI (wasm32-wasip1) guest for the SolvaPay wazero (Go) binding (Step 49)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solvapay-core = { path = "../../../crates/solvapay-core", default-features = false, features = ["server"] }
solvapay-dto = { path = "../../../crates/solvapay-dto" }
solvapay-transport = { path = "../../../crates/solvapay-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
pollster = "0.4.0"

[lints]
workspace = true
